# chatterbot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: tests.yml
data/: streamer_facts.example.md
docs/: architecture.md  dashboard.md  dataset.md  development.md  insights.md  moderation.md  prompts.md  setup.md  tui.md  whisper.md
obs_scripts/: audio_client.bat  audio_client.py  chatterbot_audio_relay.py
scripts/: backfill_badges.py  backfill_emote_only.py  backfill_message_embeddings.py  bench_embedding_quantization.py  bench_message_compression.py  migrate_vec_messages_to_int8.py  perf_api_bench.py  perf_playwright_bench.py  screenshot_dashboard.py  seed_demo.py
src/chatterbot/: __init__.py  bot.py  config.py  diagnose.py  discord_bot.py  eventbus.py  helix_sync.py  insights.py  latency.py  logging_setup.py  main.py  moderator.py  obs.py  repo.py  spam.py  streamelements.py  summarizer.py  threader.py  transcript.py  tui.py  twitch.py  youtube.py
src/chatterbot/dataset/: __init__.py  capture.py  cipher.py  cli.py  loops.py  redactor.py  retention.py  storage.py
src/chatterbot/llm/: ollama_client.py  prompts.py  providers.py  schemas.py
src/chatterbot/web/: app.py  auth.py  insight_rag.py  rag.py  settings_meta.py  thread_rag.py  topic_rag.py
src/chatterbot/web/static/css/: input.css
src/chatterbot/web/static/js/: ask.js
src/chatterbot/web/templates/: audit.html  base.html  chatters.html  dataset.html  events.html  insights.html  live.html  moderation.html  reminders.html  search.html  settings.html  stats.html  topics.html  user.html
src/chatterbot/web/templates/components/: _activity_badge.html  _avatar.html  _chatter_pill.html  _empty_state.html  _event_icon.html  _insight_actions.html  _modal.html  _nav_link.html  _new_badge.html  _pill.html  _search.html  _skeleton.html  _source_mark.html  _stat_tile.html
src/chatterbot/web/templates/modals/: _delete_note.html  _edit_note.html  _edit_profile.html  _engaging_subject.html  _event_detail.html  _forget.html  _high_impact.html  _insight_chatter.html  _merge.html  _merge_notes.html  _message_context.html  _note_from_message.html  _open_question.html  _settings_env.html  _shortcuts.html  _thread.html  _topic.html  _transcript_context.html  _transcript_group.html
src/chatterbot/web/templates/partials/: _chatter_preview.html  _events_sse.html  _guided_slot_input.html  _individuals_tabs.html  _live_sse.html  _panel.html  _panels_driver.html  _settings_field.html  chat_lag_calibrator.html  chat_questions.html  chatters_table.html  engaging_subject_expand.html  engaging_subject_talking_points.html  engaging_subjects.html  events_list.html  goals_panel.html  health_panel.html  high_impact_openers.html  high_impact_subjects.html  incident_card.html  incidents_list.html  insights_body.html  live_rows.html  merge_textarea.html  messages.html  note.html  notes_list.html  open_question_answer_angles.html  opt_out_badge.html  profile_section.html  prompt_card.html  prompts_panel.html  quiet_cohorts.html  recent_matches.html  reminders_section.html  restart_bot_result.html  search_results.html  star_button.html  streamer_facts_editor.html  topics_body.html  (+2 more)
tests/: _mock_llm.py  conftest.py
tests/dataset/: test_call_sites.py  test_capture.py  test_cipher.py  test_cli.py  test_context_snapshot.py  test_opt_out_filter.py  test_provider_capture.py  test_redactor.py  test_retention.py  test_storage.py  test_streamer_action_capture.py
tests/diagnose/: test_bundle.py
tests/insights/: test_engagement_aggregates.py  test_engaging_subjects.py  test_open_questions.py
tests/llm/: test_client_handle.py  test_prompts_registry.py
tests/repo/: test_app_settings.py  test_dataset_events_index.py  test_recent_questions.py
tests/transcript/: test_perfect_pass.py  test_stitch_grid.py
tests/web/: test_dataset_routes.py  test_engaging_subject_routes.py  test_prompts_routes.py
