[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatterbot"
version = "0.1.0"
description = "Silent Twitch chatter-profiling sidecar bot. Streamer-only profile surface; no chat-facing read path."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twitchio>=2.8.0,<3.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlite-vec>=0.1.6",
    "textual>=0.60.0",
    "python-socketio[asyncio_client]>=5.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "obsws-python>=1.6.0",
    "discord-py>=2.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
# Real-time stream transcription via the OBS audio relay. Pulls in
# faster-whisper + ctranslate2 (~300 MB on first install). Streamers
# who don't enable whisper in /settings can skip this extra entirely;
# the dashboard boots fine without it (transcript.py lazy-imports).
#   uv sync --extra whisper
whisper = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    # WASAPI loopback path (browser / game / window audio capture).
    # sounddevice doesn't expose loopback; soundcard does. Windows-only
    # in practice — the `--loopback` flag is a no-op elsewhere.
    "soundcard>=0.4.3",
]

[project.scripts]
chatterbot = "chatterbot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chatterbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
