[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatterbot"
version = "0.1.0"
description = "Silent Twitch chatter-profiling sidecar bot. Streamer-only profile surface; no chat-facing read path."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twitchio>=2.8.0,<3.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlite-vec>=0.1.6",
    "textual>=0.60.0",
    "python-socketio[asyncio_client]>=5.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "obsws-python>=1.6.0",
    "discord-py>=2.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
# Real-time stream transcription via the OBS audio relay. Pulls in
# faster-whisper + ctranslate2 (~300 MB on first install). Streamers
# who don't enable whisper in /settings can skip this extra entirely;
# the dashboard boots fine without it (transcript.py lazy-imports).
#   uv sync --extra whisper
whisper = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    # WASAPI loopback path (browser / game / window audio capture).
    # sounddevice doesn't expose loopback; soundcard does. Windows-only
    # in practice — the `--loopback` flag is a no-op elsewhere.
    "soundcard>=0.4.3",
    # OBS scene screenshots stitched into a 2x2 grid and passed as a
    # single image alongside the transcript text on each group summary
    # — gives the multimodal LLM visual context too, not just audio.
    "Pillow>=10.0.0",
]
# Personal training-dataset capture (opt-in, off by default). Encrypts
# every captured event at rest using AES-GCM with a streamer-controlled
# passphrase, compresses the payload with zstd before encryption.
# Streamers who don't `chatterbot dataset setup` can skip this extra —
# the import is lazy and the toggle defaults to off, so the bot /
# dashboard boot path doesn't notice.
#   uv sync --extra dataset
dataset = [
    # AES-GCM + Argon2id KDF. cryptography ships with audited primitives
    # and a stable wrapper; we don't need anything else from a crypto
    # library.
    "cryptography>=42.0.0",
    # zstd compression. ~5x faster than gzip at comparable ratios; size
    # difference matters at fine-tune-corpus scale (tens of MB per
    # stream day).
    "zstandard>=0.22.0",
]

[project.scripts]
chatterbot = "chatterbot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chatterbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
